added research field classifier
